media/css/firefox/mobile/mobile.scss
/* ... */
//* -------------------------------------------------------------------------- */

// not yet recognized as valid by style lint, so we abstract it
$mq-reduced-motion: 'screen and (prefers-reduced-motion: reduce)';

main .mzp-l-content {
    max-width: 400px;

    @media #{$mq-md} {
        max-width: $content-max;
    }
}


//* -------------------------------------------------------------------------- */
//  Download buttons

.mobile-download-buttons li {
    padding-top: $spacing-sm;
    display: inline-block;
}

.modal-logo {
    @include at2x('/media/protocol/img/logos/firefox/browser/logo-lg.png', auto, 100%);
    @include image-replaced;
    background-repeat: no-repeat;
    background-position: center;
}

.header-product-ctas {
    margin-bottom: $spacing-2xl;
}

// for android/iOS, hide widget/QR code in favor of app store badges
.android,
.ios {
    .mobile-download-buttons-wrapper {
        display: block;
    }

    .qr-code-wrapper,
    #modal-wrapper .desktop-download,
    #send-to-device {
        display: none;
    }

    .header-product-ctas {
        display: none;
    }
}

// hide download links for one platform from the other
.android .mobile-download-buttons .ios {
    display: none;
}

.ios .mobile-download-buttons .android,
.ios .mobile-download-buttons .android-apk {
    display: none;
}


// very basic styling for no-JS visitors
.no-js {
    .header-product-ctas {
        display: none;
    }

    .mobile-download-buttons-wrapper {
        display: block;
        text-align: center;
    }

    .mobile-download-buttons {
        margin: 1em 0;

        @media #{$mq-sm} {
            @supports (display: flex) {
                & {
                    align-items: center;
                    display: flex;
                    flex-direction: column;
                    margin: 1em auto;
                    width: 340px;

                    &.hidden {
                        display: none;
                    }

                    li {
                        margin: 0 auto; // so that a single item is centred
                    }
                }
            }
        }

        .android-apk a {
            display: inline-block;
            margin: 10px 0;
            @include text-body-sm;
        }
    }
}

//* -------------------------------------------------------------------------- */
//  Wordmark

.c-wordmark {
    @include at2x('/media/protocol/img/logos/firefox/browser/logo-word-hor-sm.png', contain);
    @include bidi(((padding-right, $spacing-sm, padding-left, 0),));
    @include image-replaced;
    background-position: top center;
    background-repeat: no-repeat;
    background-size: contain;
    content: '';
    display: block;

    @media #{$mq-md} {
        @include bidi(((background-position, top left, top right),));
    }
}

.end-hero .c-wordmark {
    background-position: center;
}
//* -------------------------------------------------------------------------- */
// Hero

.t-hero-primary {
    &.mzp-c-hero {
        text-align: center;
        color: $color-ink-80;

        &.mzp-t-firefox::after {
            display: none;
        }

        &.v-b {
            .mzp-c-hero-body {
                margin: 0 auto $spacing-2xl;
                width: 100%;

                .mzp-c-hero-cta {
                    float: none;
                }
            }

            @media #{$mq-lg} {
                .mzp-c-hero-body {
                    @include grid-half;
                    @include bidi(((float, left, right),));
                    margin: unset;
                }

                @supports (display: grid) {
                    & > .mzp-l-content {
                        display: grid;
                        grid-template-columns: repeat(2, 1fr);
                        grid-column-gap: $spacing-2xl;
                    }

                    .mzp-c-hero-body {
                        float: none;
                        width: auto;
                        margin-right: auto;
                    }
                }
            }
        }
    }

    .mzp-c-hero-desc {
        @include text-title-sm;

        p {
            margin-bottom: $spacing-lg;
        }
    }

    .mzp-c-button-download-container {
        margin-bottom: 0;
    }

    @media #{$mq-md} {
        &.mzp-c-hero.mzp-has-image {
            background-image: url('/media/img/firefox/mobile/img-browser-mobile.svg'), url('/media/img/firefox/mobile/img-mobile-noodles.svg');
            align-items: center;
            text-align: left;
            background-repeat: no-repeat;
            background-size: contain;
            background-position: top left calc(50vw + #{$layout-2xl}), top left 50vw;
            display: flex;
            min-height: 560px;
            html[dir="rtl"] &{
                background-position: top right calc(50vw + #{$spacing-md}), top right calc(50vw + #{$spacing-md});
                text-align: right;
            }

            &.v-b {
                @include background-size(1200px 275px);
                background-image: url('/media/img/firefox/mobile/img-mobile-noodles.svg');
                background-position: top left calc(50vw + #{$spacing-md});
                padding: 0;
            }
        }

        .end-hero .c-wordmark {
            background-position: center;
        }

        .mzp-l-content {
            width: 100%;
        }
    }

    @media #{$mq-lg} {
        .end-hero .c-wordmark {
            background-position: center;
        }
    }
}

//* -------------------------------------------------------------------------- */
// Private

.t-private {
    @include light-links;
    background-color: $color-ink-80;
    color: #fff;

    h2 {
        @include text-title-lg;
        color: $color-pink-50;
        margin-top: $spacing-md;
    }

    // protocol/issues#335
    a:visited {
        color: #ffffff;
        opacity: 0.8;
    }

    a:hover,
    a:focus,
    a:active {
        opacity: 1;
    }
}
/* ... */

